--- a/tentang_sistem.html
+++ b/tentang_sistem.html
@@ -47,7 +47,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html"  class="active">Beranda</a></li>
+          <li><a href="index.html" >Beranda</a></li>
           <li><a href="product_list.html">Analisis Ulasan</a></li>
           <li><a href="hasil_ulasan.html">Hasil & Rating</a></li>
           <li class="dropdown">
@@ -63,13 +63,10 @@
             <li><a href="kreditpintar.html">Kredit Pintar</a></li>
           </ul>
         </li>
-          <li><a href="tentang_sistem.html">Tentang Sistem</a></li>
+          <li><a href="tentang_sistem.html" class="active">Tentang Sistem</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <a class="btn-getstarted" href="#analyze">Mulai Analisis</a>
-
     </div>
   </header>
 
