--- a/easycash.html
+++ b/easycash.html
@@ -47,7 +47,7 @@
           <ul>
             <li><a href="akulaku.html">Aku Laku</a></li>
             <li><a href="adakami.html">Adakami</a></li>
-            <li><a href="easycash.html">Easycash</a></li>
+            <li><a href="easycash.html" class="active">Easycash</a></li>
             <li><a href="pinjamwinwin.html">Pinjam Winwin</a></li>
             <li><a href="tunaiku.html">Tunaiku</a></li>
             <li><a href="pinjamgo.html">Pinjam GO</a></li>
@@ -59,9 +59,6 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <a class="btn-getstarted" href="#analyze">Mulai Analisis</a>
-
     </div>
   </header>
 
