--- a/grafik_statistik.html
+++ b/grafik_statistik.html
@@ -39,11 +39,11 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html"  class="active">Beranda</a></li>
+          <li><a href="index.html">Beranda</a></li>
           <li><a href="product_list.html">Analisis Ulasan</a></li>
           <li><a href="hasil_ulasan.html">Hasil & Rating</a></li>
           <li class="dropdown">
-          <a href="grafik_statistik.html"><span>Grafik & Statistik</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <a href="grafik_statistik.html" class="active"><span>Grafik & Statistik</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="akulaku.html">Aku Laku</a></li>
             <li><a href="adakami.html">Adakami</a></li>
@@ -59,9 +59,6 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <a class="btn-getstarted" href="#analyze">Mulai Analisis</a>
-
     </div>
   </header>
 
