--- a/pinjamwinwin.html
+++ b/pinjamwinwin.html
@@ -39,7 +39,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html"  class="active">Beranda</a></li>
+          <li><a href="index.html">Beranda</a></li>
           <li><a href="product_list.html">Analisis Ulasan</a></li>
           <li><a href="hasil_ulasan.html">Hasil & Rating</a></li>
           <li class="dropdown">
@@ -48,7 +48,7 @@
             <li><a href="akulaku.html">Aku Laku</a></li>
             <li><a href="adakami.html">Adakami</a></li>
             <li><a href="easycash.html">Easycash</a></li>
-            <li><a href="pinjamwinwin.html">Pinjam Winwin</a></li>
+            <li><a href="pinjamwinwin.html" class="active">Pinjam Winwin</a></li>
             <li><a href="tunaiku.html">Tunaiku</a></li>
             <li><a href="pinjamgo.html">Pinjam GO</a></li>
             <li><a href="indodana.html">Indodana</a></li>
@@ -59,9 +59,6 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <a class="btn-getstarted" href="#analyze">Mulai Analisis</a>
-
     </div>
   </header>
 
