--- a/product_list.html
+++ b/product_list.html
@@ -122,8 +122,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html"  class="active">Beranda</a></li>
-          <li><a href="product_list.html">Analisis Ulasan</a></li>
+          <li><a href="index.html" >Beranda</a></li>
+          <li><a href="product_list.html" class="active">Analisis Ulasan</a></li>
           <li><a href="hasil_ulasan.html">Hasil & Rating</a></li>
           <li class="dropdown">
           <a href="grafik_statistik.html"><span>Grafik & Statistik</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -142,9 +142,6 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <a class="btn-getstarted" href="#analyze">Mulai Analisis</a>
-
     </div>
   </header>
 
