--- a/tunaiku.html
+++ b/tunaiku.html
@@ -39,7 +39,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html"  class="active">Beranda</a></li>
+          <li><a href="index.html">Beranda</a></li>
           <li><a href="product_list.html">Analisis Ulasan</a></li>
           <li><a href="hasil_ulasan.html">Hasil & Rating</a></li>
           <li class="dropdown">
@@ -49,7 +49,7 @@
             <li><a href="adakami.html">Adakami</a></li>
             <li><a href="easycash.html">Easycash</a></li>
             <li><a href="pinjamwinwin.html">Pinjam Winwin</a></li>
-            <li><a href="tunaiku.html">Tunaiku</a></li>
+            <li><a href="tunaiku.html" class="active">Tunaiku</a></li>
             <li><a href="pinjamgo.html">Pinjam GO</a></li>
             <li><a href="indodana.html">Indodana</a></li>
             <li><a href="kreditpintar.html">Kredit Pintar</a></li>
